--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
 
+<head>
+<meta charset="UTF-8" />
+<title>&ltHero!Mars!/&gt</title>
+<link rel="stylesheet" type="text/css" href="../css/index.css" />
+</head>
+
+<body>
+	<h1 align="center">&ltHero!Mars!/&gt</h1>
+
+	<form action="#" th:action="@{/login}" th:object="${loginFormData}"
+		method="POST">
+		<p th:errors="*{userName}"></p>
+		Username: <input type="text" th:field="*{userName}" /><br />
+		<p th:errors="*{password}"></p>
+		Password: <input type="password" th:field="*{password}" /> <input
+			type="submit" value="Belépés" />
+	</form>
 </body>
+
 </html>
