--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 	<form action="#" th:action="@{/login}" th:object="${loginFormData}"
 		method="POST">
 		<p th:errors="*{userName}"></p>
-		Username: <input type="text" th:field="*{userName}" /><br />
+		Username: <input type="text" th:field="*{userName}" /><br/><br/>
 		<p th:errors="*{password}"></p>
 		Password: <input type="password" th:field="*{password}" /> <input
 			type="submit" value="Belépés" />
