--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -8,8 +8,13 @@ body {
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif,
 		Haettenschweiler, 'Arial Narrow Bold', sans-serif, 'Gill Sans MT',
 		Calibri, 'Trebuchet MS', sans-serif;
+	
 }
 
 h1 {
 	text-align: center;
+}
+
+.nav {
+    background-color:lightskyblue;
 }
