--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<meta charset="UTF-8" />
-<title>&ltHero!Mars!/&gt</title>
-
+	<meta charset="UTF-8">
+	<title>HeroMars - Registration</title>
+	
 	<link rel="stylesheet"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
 		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
@@ -24,8 +23,6 @@
 	
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 
-	<link rel="stylesheet" type="text/css" href="../css/index.css" />
-	
 </head>
 
 <body>
@@ -35,26 +32,15 @@
           <a class="nav-link" th:href="@{/index}">Main Page</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/register}">Register</a>
+          <a class="nav-link active" th:href="@{/register}">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" th:href="@{/login}">Login</a>
+          <a class="nav-link" th:href="@{/login}">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/stb}">Stb...</a>
         </li>
       </ul>
 
-	<h1 align="center">&ltHero!Mars!/&gt</h1>
-
-	<form action="#" th:action="@{/login}" th:object="${loginFormData}"
-		method="POST">
-		<p th:errors="*{userName}"></p>
-		Username: <input type="text" th:field="*{userName}" /><br/><br/>
-		<p th:errors="*{password}"></p>
-		Password: <input type="password" th:field="*{password}" /> <input
-			type="submit" value="Belépés" />
-	</form>
 </body>
-
 </html>
