--- a/src/main/resources/templates/stb.html
+++ b/src/main/resources/templates/stb.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-<meta charset="UTF-8" />
-<title>&ltHero!Mars!/&gt</title>
+	<meta charset="UTF-8">
+	<title>Heromars - Stb...</title>
 
 	<link rel="stylesheet"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -24,10 +23,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 
-	<link rel="stylesheet" type="text/css" href="../css/index.css" />
-	
 </head>
-
 <body>
 
       <ul class="nav nav-tabs justify-content-center">
@@ -38,23 +34,12 @@
           <a class="nav-link" th:href="@{/register}">Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" th:href="@{/login}">Login</a>
+          <a class="nav-link" th:href="@{/login}">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/stb}">Stb...</a>
+          <a class="nav-link active" th:href="@{/stb}">Stb...</a>
         </li>
       </ul>
 
-	<h1 align="center">&ltHero!Mars!/&gt</h1>
-
-	<form action="#" th:action="@{/login}" th:object="${loginFormData}"
-		method="POST">
-		<p th:errors="*{userName}"></p>
-		Username: <input type="text" th:field="*{userName}" /><br/><br/>
-		<p th:errors="*{password}"></p>
-		Password: <input type="password" th:field="*{password}" /> <input
-			type="submit" value="Belépés" />
-	</form>
 </body>
-
 </html>
