--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,46 +1,67 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>HeroMars - Registration</title>
-	
-	<link rel="stylesheet"
-		href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-		crossorigin="anonymous">
-	
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-		integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-		crossorigin="anonymous"></script>
-	
-	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+<meta charset="UTF-8">
+<title>HeroMars - Registration</title>
+
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+	integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+	crossorigin="anonymous">
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+	integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+	integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+	crossorigin="anonymous"></script>
+
+<link rel="stylesheet" type="text/css" href="../css/index.css" />
 
 </head>
 
 <body>
 
-      <ul class="nav nav-tabs justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/index}">Main Page</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" th:href="@{/register}">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/login}">Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/stb}">Stb...</a>
-        </li>
-      </ul>
+	<ul class="nav nav-tabs justify-content-center">
+		<li class="nav-item"><a class="nav-link" th:href="@{/index}">Main
+				Page</a></li>
+		<li class="nav-item"><a class="nav-link active"
+			th:href="@{/register}">Register</a></li>
+		<li class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a>
+		</li>
+		<li class="nav-item"><a class="nav-link" th:href="@{/stb}">Stb...</a>
+		</li>
+	</ul>
+
+	<h1 align="center">&ltHero!Mars!/&gt</h1>
+
+	<form action="#" th:action="@{/register}" th:object="${registrationFormData}" method="POST">
+		<p th:errors="*{userName}"></p>
+		Username: <input type="text" th:field="*{userName}" />
+		<br />
+		<br />
+		<p th:errors="*{password}"></p>
+		Password: <input type="password" th:field="*{password}" /> 
+		<br />
+		<br />
+		<p th:errors="*{confirmPassword}"></p>
+		Password: <input type="password" th:field="*{confirmPassword}" /> 
+		<br />
+		<br />
+		<p th:errors="*{eMail}"></p>
+		E-mail: <input type="email" th:field="*{eMail}" /> 
+		<br />
+		<br />
+		<p th:errors="*{birthYear}"></p>
+		Year of birth: <input type="number" min="1930" max="2001" value="1988" th:field="*{birthYear}" />
+		<br/> 
+		<input type="submit" value="Regisztráció" />
+	</form>
 
 </body>
 </html>
