--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,14 @@
    crossorigin="anonymous"></script>
    
    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+   
+   <script>
+   
+   
+   
+   document.getElementsByClassName("userNameSession").item(0).style.visibility="hidden";
+   
+   </script>
 
 </head>
 
@@ -37,7 +45,11 @@
       </ul>
 
 
-
+	<h1 align="center">&ltHero!Mars!/&gt</h1>
+	
+	<br/>
+	
+	<p>${model.loggedInUserName}</p>
 
 </body>
 </html>
