enlarged_background_image
Enlarged background image to fill a FullHD Display - not so bad in quality

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-	background-image: url('../img/mars2.jpg');
+	background-image: url('../img/mars2_bigger.jpg');
 	background-color: black;
 	background-repeat: no-repeat;
 	color: whitesmoke;
