--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-<meta charset="UTF-8" />
-<title>&ltHero!Mars!/&gt</title>
+	<meta charset="UTF-8" />
+	
+	<title>&ltHero!Mars!/&gt</title>
 
 	<link rel="stylesheet"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -23,8 +24,6 @@
 		crossorigin="anonymous"></script>
 	
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
-
-	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 	
 </head>
 
@@ -40,6 +39,9 @@
         <li class="nav-item">
           <a class="nav-link active" th:href="@{/login}">Login</a>
         </li>
+        <li class="nav-item">
+			<a class="nav-link" th:href="@{/profile}" th:unless="${loggedInUserName == null}">Profile</a>
+		</li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/stb}">Stb...</a>
         </li>
