--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
-	<title>Heromars - Stb...</title>
+
+	<title>User Profile</title>
 
 	<link rel="stylesheet"
 		href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -24,34 +26,26 @@
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 
 </head>
-<body onload="loginCeck()">
+<body>
 
-    <ul class="nav nav-tabs justify-content-center">
-       <li class="nav-item">
-         <a class="nav-link" th:href="@{/index}">Main Page</a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" th:href="@{/register}">Register</a>
-       </li>
-       <li class="nav-item">
-         <a class="nav-link" th:href="@{/login}">Login</a>
-       </li>
-       <li class="nav-item">
-			<a class="nav-link" th:href="@{/profile}" th:unless="${loggedInUserName == null}">Profile</a>
+	<ul class="nav nav-tabs justify-content-center">
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/index}">Main Page</a></li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/register}">Register</a>
 		</li>
-       <li class="nav-item">
-         <a class="nav-link active" th:href="@{/stb}">Stb...</a>
-       </li>
-    </ul>
-      
-    <h1 align="center">&ltHero!Mars!/&gt</h1>
-	
-	<br/>
-	
-	<div th:switch="${loggedInUserName}"> 
-  		<p th:case="null">Not logged in</p>
-  		<p th:case="*" th:text="'Logged in as: ' + ${loggedInUserName}"></p>
-	</div>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/login}">Login</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link active" th:href="@{/profile}" th:unless="${loggedInUserName == null}">Profile</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/stb}">Stb...</a>
+		</li>
+	</ul>
+
+	<h1 align="center" th:text="'Welcome ' + ${loggedInUserName}"></h1>
 
 </body>
 </html>
