--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -28,13 +28,20 @@
 <body>
 
 	<ul class="nav nav-tabs justify-content-center">
-		<li class="nav-item"><a class="nav-link" th:href="@{/index}">Main
-				Page</a></li>
-		<li class="nav-item"><a class="nav-link active"
-			th:href="@{/register}">Register</a></li>
-		<li class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/index}">Main Page</a>
 		</li>
-		<li class="nav-item"><a class="nav-link" th:href="@{/stb}">Stb...</a>
+		<li class="nav-item">
+			<a class="nav-link active" th:href="@{/register}">Register</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/login}">Login</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/profile}" th:unless="${loggedInUserName == null}">Profile</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/stb}">Stb...</a>
 		</li>
 	</ul>
 
