--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -45,7 +45,7 @@
 		</li>
 	</ul>
 
-	<h1 align="center" th:text="'Welcome ' + ${loggedInUserName}"></h1>
+	<h1 align="center" th:text="'Welcome in the world of HeroMars ' + ${loggedInUserName} + '!'"></h1>
 
 </body>
 </html>
