Hero selection is working and handled by the Session

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,6 +45,7 @@
 	<br/>
 	
 	<p th:text="'Logged in as: ' + ${loggedInUserName}" th:unless="${loggedInUserName == null}"></p>
+	<p th:text="'Selected hero: ' + ${currentHeroName}" th:unless="${currentHeroName == null}"></p>
 
 </body>
 </html>
