--- a/src/main/resources/templates/hero_creation.html
+++ b/src/main/resources/templates/hero_creation.html
@@ -30,7 +30,7 @@
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item"><a class="nav-link" th:href="@{/index}">Main
 				Page</a></li>
-		<li class="nav-item"><a class="nav-link active"
+		<li class="nav-item"><a class="nav-link"
 			th:href="@{/register}">Register</a></li>
 		<li class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a>
 		</li>
