--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -100,6 +100,17 @@
   		<p th:case="*" th:text="'Selected hero: ' + ${currentHeroName}"></p>
 	</div>
 	
+	<br/>
+	
+	<div> 
+		
+		<form action="#" th:action="@{/create_hero}" method="GET">
+		
+			<input type="submit" value="Hős létrehozása"/>
+		
+		</form>
+
+	</div>
 
 </body>
 </html>
