--- a/src/main/resources/templates/hero_data.html
+++ b/src/main/resources/templates/hero_data.html
@@ -27,13 +27,15 @@
 	</script>
 	
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="stylesheet" type="text/css" href="../css/hero_data.css" />
+	
 </head>
 
 <body>
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-        	<a class="nav-link active" th:href="@{/index}">Main Page</a>
+        	<a class="nav-link" th:href="@{/index}">Main Page</a>
       	</li>
       	<li class="nav-item">
         	<a class="nav-link" th:href="@{/register}">Register</a>
@@ -45,15 +47,15 @@
 			<a class="nav-link" th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">Profile</a>
 		</li>
       	<li class="nav-item">
-        	<a class="nav-link active" th:href="@{/stb}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hero</a>
+        	<a class="nav-link active" th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hero</a>
       	</li>
     </ul>
     
-    <div style="width:60%">
+    <div class="tableContainer">
     
 		<table>
 			<tr>
-		    	<th colspan="2">Név: Fangorn</td>
+		    	<th colspan="3">Név: Fangorn</td>
 		  	</tr>
 			<tr>
 				<td rowspan="4">Ez itt a kép helye</td>
