--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,59 +1,69 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml11-thymeleaf-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>HeroMars - Main Page</title>
 
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-   crossorigin="anonymous">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+	integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+	crossorigin="anonymous">
 
-   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-   crossorigin="anonymous"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-   crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-   crossorigin="anonymous"></script>
-   
-   <link rel="stylesheet" type="text/css" href="../css/index.css" />
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+	integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+	crossorigin="anonymous"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+	integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+	crossorigin="anonymous"></script>
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+	integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+	crossorigin="anonymous"></script>
+
+<link rel="stylesheet" type="text/css" href="../css/index.css" />
 
 </head>
 
 <body>
 
 
-      <ul class="nav nav-tabs justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link active" th:href="@{/index}">Main Page</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/register}">Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/login}">Login</a>
-        </li>
-        <li class="nav-item">
-			<a class="nav-link" th:href="@{/profile}" th:unless="${loggedInUserName == null}">Profile</a>
+	<ul class="nav nav-tabs justify-content-center">
+		<li class="nav-item"><a class="nav-link active"
+			th:href="@{/index}">Main Page</a></li>
+		<li class="nav-item"><a class="nav-link" th:href="@{/register}">Register</a>
 		</li>
-        <li class="nav-item">
-          <a class="nav-link" th:href="@{/stb}">Stb...</a>
-        </li>
-      </ul>
-
+		<li class="nav-item"><a class="nav-link" th:href="@{/login}">Login</a>
+		</li>
+		<li class="nav-item"><a class="nav-link" th:href="@{/profile}"
+			th:unless="${loggedInUserName == null}">Profile</a></li>
+		<li class="nav-item"><a class="nav-link" th:href="@{/stb}">Stb...</a>
+		</li>
+		<li class="nav-item"><form class="nav-link" action="#"
+				th:action="@{/logout}" method="GET"
+				th:unless="${loggedInUserName == null}">
+				<input type="submit" value="Logout" />
+			</form></li>
+	</ul>
 
 	<h1 align="center">&ltHero!Mars!/&gt</h1>
-	
-	<br/>
-	
-	<p th:text="'Logged in as: ' + ${loggedInUserName}" th:unless="${loggedInUserName == null}"></p>
-	<p th:text="'Selected hero: ' + ${currentHeroName}" th:unless="${currentHeroName == null}"></p>
-	
-	
+
+	<br />
+
+	<p th:text="'Logged in as: ' + ${loggedInUserName}"
+		th:unless="${loggedInUserName == null}"></p>
+	<p th:text="'Selected hero: ' + ${currentHeroName}"
+		th:unless="${currentHeroName == null}"></p>
+
+
 	<div>
-	
-	<p th:text="'Logged in as: ' + ${session2.currentUserName}" th:unless="${session2 == null || session2.currentUserName == null}"></p>
-	<p th:text="'Selected hero: ' + ${session2.currentHeroName}" th:unless="${session2 == null || session2.currentHeroName == null}"></p>
-	
+
+		<p th:text="'Logged in as: ' + ${session2.currentUserName}"
+			th:unless="${session2 == null || session2.currentUserName == null}"></p>
+		<p th:text="'Selected hero: ' + ${session2.currentHeroName}"
+			th:unless="${session2 == null || session2.currentHeroName == null}"></p>
+
 	</div>
 
 </body>
