--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -30,7 +30,7 @@
 <body>
 
 	<ul class="nav nav-tabs justify-content-center">
-		<li class="nav-item"><a class="nav-link" th:href="@{/index}">Main
+		<li class="nav-item">
         	<a class="nav-link" th:href="@{/index}">Main Page</a>
       	</li>
       	<li class="nav-item">
