--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -30,20 +30,23 @@
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-        	<a class="nav-link" th:href="@{/index}">Main Page</a>
+        	<a class="nav-link" th:href="@{/index}">Főoldal</a>
       	</li>
       	<li class="nav-item">
-        	<a class="nav-link active" th:href="@{/register}">Register</a>
+        	<a class="nav-link active" th:href="@{/register}" th:unless="${sessionData.currentUserName != null}" >Regisztráció</a>
       	</li>
       	<li class="nav-item">
-			<a class="nav-link" th:href="@{/login}">Login</a>
+			<a class="nav-link" th:href="@{/login}" th:unless="${sessionData.currentUserName != null}" >Bejelentkezés</a>
       	</li>
       	<li class="nav-item">
-			<a class="nav-link" th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">Profile</a>
+			<a class="nav-link" th:href="@{/profile}" th:unless="${sessionData.currentUserName == null}">Profil</a>
 		</li>
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hero</a>
+        	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData.currentHeroName == null}">Hős</a>
       	</li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/logout}" th:unless="${sessionData.currentUserName == null}">Kijelentkezés</a>
+		</li>
     </ul>
 
 	<h1 align="center">&ltHero!Mars!/&gt</h1>
