--- a/src/main/resources/templates/hero_data.html
+++ b/src/main/resources/templates/hero_data.html
@@ -35,20 +35,23 @@
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-        	<a class="nav-link" th:href="@{/index}">Main Page</a>
+        	<a class="nav-link" th:href="@{/index}">Főoldal</a>
       	</li>
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/register}">Register</a>
+        	<a class="nav-link" th:href="@{/register}" th:unless="${sessionData.currentUserName != null}" >Regisztráció</a>
       	</li>
       	<li class="nav-item">
-			<a class="nav-link" th:href="@{/login}">Login</a>
+			<a class="nav-link" th:href="@{/login}" th:unless="${sessionData.currentUserName != null}" >Bejelentkezés</a>
       	</li>
       	<li class="nav-item">
-			<a class="nav-link" th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">Profile</a>
+			<a class="nav-link" th:href="@{/profile}" >Profil</a>
 		</li>
       	<li class="nav-item">
-        	<a class="nav-link active" th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hero</a>
+        	<a class="nav-link active" th:href="@{/hero}" >Hős</a>
       	</li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/logout}" >Kijelentkezés</a>
+		</li>
     </ul>
     
     <div class="tableContainer" th:object="${hero}">
