--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -31,29 +31,27 @@
 
 	<ul class="nav nav-tabs justify-content-center">
 		<li class="nav-item">
-        	<a class="nav-link" th:href="@{/index}">Main Page</a>
+        	<a class="nav-link" th:href="@{/index}">Főoldal</a>
       	</li>
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/register}">Register</a>
+        	<a class="nav-link" th:href="@{/register}" th:unless="${sessionData.currentUserName != null}" >Regisztráció</a>
       	</li>
       	<li class="nav-item">
-			<a class="nav-link" th:href="@{/login}">Login</a>
+			<a class="nav-link" th:href="@{/login}" th:unless="${sessionData.currentUserName != null}" >Bejelentkezés</a>
       	</li>
       	<li class="nav-item">
-			<a class="nav-link active" th:href="@{/profile}" th:unless="${sessionData == null || sessionData.currentUserName == null}">Profile</a>
+			<a class="nav-link active" th:href="@{/profile}" >Profil</a>
 		</li>
       	<li class="nav-item">
-        	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hero</a>
+        	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData.currentHeroName == null}">Hős</a>
       	</li>
-		<li class="nav-item"><form class="nav-link" action="#"
-				th:action="@{/logout}" method="GET"
-				th:unless="${loggedInUserName == null}">
-				<input type="submit" value="Logout" />
-			</form></li>
+		<li class="nav-item">
+			<a class="nav-link" th:href="@{/logout}" >Kijelentkezés</a>
+		</li>
     </ul>
 
 	<h1 align="center"
-		th:text="'Welcome in the world of HeroMars ' + ${loggedInUserName} + '!'"></h1>
+		th:text="'Welcome in the world of HeroMars ' + ${sessionData.currentUserName} + '!'"></h1>
 
 	<br />
 
@@ -104,9 +102,9 @@
 
 	<br />
 
-	<div th:switch="${currentHeroName}">
+	<div th:switch="${sessionData.currentHeroName}">
 		<p th:case="null">No selected hero</p>
-		<p th:case="*" th:text="'Selected hero: ' + ${currentHeroName}"></p>
+		<p th:case="*" th:text="'Selected hero: ' + ${sessionData.currentHeroName}"></p>
 	</div>
 
 	<br />
