--- a/src/main/resources/templates/hero_data.html
+++ b/src/main/resources/templates/hero_data.html
@@ -26,6 +26,18 @@
 		crossorigin="anonymous">
 	</script>
 	
+	<script type="text/javascript">
+		
+		function handleItemMove(itemId) {
+			
+			console.log(itemId);
+			
+			window.location.href = '/itemChange?itemId=' + itemId;
+			
+		}
+	
+	</script>
+	
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 	<link rel="stylesheet" type="text/css" href="../css/hero_data.css" />
 	
@@ -54,14 +66,18 @@
 		</li>
     </ul>
     
-    <div class="tableContainer" th:object="${hero}">
+    <div class="contentContainer" th:object="${hero}">
     
 		<table>
 			<tr>
 		    	<th colspan="3" th:text="${sessionData.currentHeroName}"></th>
 		  	</tr>
 			<tr>
-				<td rowspan="4">Ez itt a kép helye</td>
+				<td rowspan="4">
+				
+				<img th:src="@{*{'../img/' + species.description + '.jpg'}}" th:title="*{species.description}" />
+				
+				</td>
 				<td>Szint:</td>
 				<td th:text="*{heroLevel}"></td>
 			</tr>
@@ -122,12 +138,16 @@
 		    	<th>Név</th>
 		    	<th>Szint</th>
 		    	<th>Típus</th>
+		    	<th>Tartósság</th>
 		  	</tr>
-		  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == false}">
+		  	<tbody class="itemList">
+		  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == false}" th:ondblclick="'handleItemMove(\'' + ${item.itemId} + '\');'">
 				<td th:text="${item.name.description}" />
 				<td th:text="${item.level}" />
 				<td th:text="${item.type}" />
+				<td th:text="${item.durability}" />
 			</tr>
+			</tbody>
 		</table>
 		
 		<br/>
@@ -140,17 +160,25 @@
 		    	<th>Név</th>
 		    	<th>Szint</th>
 		    	<th>Típus</th>
+		    	<th>Tartósság</th>
 		    	<th>Eladás</th>
 		  	</tr>
-		  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == true}">
+		  	<tbody class="itemList">
+		  	<tr th:each="item: *{items}" th:unless="${item.marketPresence != null || item.isInUse == true}" th:ondblclick="'handleItemMove(\'' + ${item.itemId} + '\');'">
 				<td th:text="${item.name.description}" />
 				<td th:text="${item.level}" />
 				<td th:text="${item.type}" />
+				<td th:text="${item.durability}" />
 				<td>
 					<input type="submit" value="Piacra kitesz" />
 				</td>
 			</tr>
+			</tbody>
 		</table>
+		
+		<br/>
+		
+		<p th:text="${itemChangeMessage}" th:unless="${itemChangeMessage == null}"></p>
     
     </div>
 
