Webpage design for the menu + skilltable done

--- a/src/main/resources/static/css/hero_data.css
+++ b/src/main/resources/static/css/hero_data.css
@@ -7,8 +7,9 @@ table {
 
 .contentContainer {
     margin: auto;
-    width: 60%;
-    padding: 10px;
+    width: 70%;
+    padding-top: 60px;
+    display: block;
 }
 
 td {
