--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -8,7 +8,7 @@ body {
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif,
 		Haettenschweiler, 'Arial Narrow Bold', sans-serif, 'Gill Sans MT',
 		Calibri, 'Trebuchet MS', sans-serif;
-	
+	display: block;
 }
 
 h1 {
@@ -17,4 +17,35 @@ h1 {
 
 .nav {
     background-color:lightskyblue;
+}
+
+.menuLine {
+	display: block;
+	position: fixed;
+	z-index: 8000;
+	width: 100%;
+	background-color:lightskyblue;
+}
+
+.mainMenu {
+    margin: auto;
+    width: 70%;
+    display: block;
+    position: relative;
+}
+
+.secondaryMenu {
+	position: absolute;
+	display: block;
+	z-index: 90000;
+	top: 60px;
+	left: -50px;
+	margin: 0;
+}
+
+.logout {
+	position: fixed;
+	right: 20px;
+	margin: 0;
+	z-index: 90000;
 }
