--- a/src/main/resources/templates/hero_data.html
+++ b/src/main/resources/templates/hero_data.html
@@ -49,6 +49,9 @@
       	<li class="nav-item">
         	<a class="nav-link active" th:href="@{/hero}" >Hős</a>
       	</li>
+      	<li class="nav-item">
+			<a class="nav-link" th:href="@{/market}">Marketplace</a>
+		</li>
 		<li class="nav-item">
 			<a class="nav-link" th:href="@{/logout}" >Kijelentkezés</a>
 		</li>
