--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,6 +45,9 @@
       	<li class="nav-item">
         	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData == null || sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hős</a>
       	</li>
+       	<li class="nav-item">
+			<a class="nav-link" th:href="@{/market}" th:unless="${sessionData == null || sessionData.currentHeroName == null}">Marketplace</a>
+		</li>
 		<li class="nav-item">
 			<a class="nav-link" th:href="@{/logout}" th:unless="${sessionData == null || sessionData.currentUserName == null}">Kijelentkezés</a>
 		</li>
