--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -46,6 +46,9 @@
       	<li class="nav-item">
         	<a class="nav-link" th:href="@{/hero}" th:unless="${sessionData.currentUserName == null || sessionData.currentHeroName == null}">Hős</a>
       	</li>
+      	<li class="nav-item">
+			<a class="nav-link" th:href="@{/market}" th:unless="${sessionData.currentHeroName == null}">Marketplace</a>
+		</li>
 		<li class="nav-item">
 			<a class="nav-link" th:href="@{/logout}" th:unless="${sessionData.currentUserName == null}">Kijelentkezés</a>
 		</li>
