Learning function works for the four skills. Discussion required regarding data modell (Do we need HeroList in Skill Entity, or we can do simply just like with Items?) Now I had to implement a Skill JpaRepository.

--- a/src/main/resources/templates/hero_actions.html
+++ b/src/main/resources/templates/hero_actions.html
@@ -66,11 +66,22 @@
 		<br />
 		<input type="button" th:onclick="'window.location.href = \'' + @{/hunting_treasure} + '\''" value="Kincsre vadászok" />
 		<br />
+		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_welldrilling_skill} + '\''" 
+		value="Kútfúró képességet fejlesztek" />
+		<br />
+		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_hunting_skill} + '\''" 
+		value="Vadászó képességet fejlesztek" />
+		<br />
+		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_astronomer_skill} + '\''" 
+		value="Csillagvizsgáló képességet fejlesztek" />
+		<br />
+		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_treasure_hunter_skill} + '\''" 
+		value="Kincsvadász képességet fejlesztek" />
+		<br />
 		<input type="button" th:onclick="'window.location.href = \'' + @{/visiting_blacksmith} + '\''" value="Kovácshoz megyek" />
 		<br />
 		<input type="button" th:onclick="'window.location.href = \'' + @{/going_to_mission} + '\''" value="Küldetésre megyek" />
-		<br />
-		<input type="button" th:onclick="'window.location.href = \'' + @{/learning_skill} + '\''" value="Tanulni megyek" />
+		
 	</form>
 	
 </body>
